Fixed card spacing, added logic which inserted rows.

--- a/public/styles/application.css
+++ b/public/styles/application.css
@@ -13,8 +13,30 @@
   width: 100%;
 }
 
+.card-body {
+  height: 214px;
+}
+
+.card-footer {
+  background-color: #fff;
+  height: 50px;
+  border-top: 1px light-gray;
+}
+
 .card {
   margin-bottom: 40px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.padding-fix {
+  margin-bottom: 40px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.card-title {
+  font-size: 1.2em;
 }
 
 .card-img {
